// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser Should work with arrays 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 14,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 14,
      "expression": Object {
        "__debugKind": "ArraysExpression",
        "defaultValue": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 14,
          "kind": 35,
          "pos": 12,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 13,
            "fullPos": 11,
            "kind": 19,
            "pos": 12,
            "value": "0",
          },
        },
        "end": 14,
        "kind": 38,
        "length": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 11,
          "kind": 35,
          "pos": 8,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 10,
            "fullPos": 8,
            "kind": 19,
            "pos": 8,
            "value": "10",
          },
        },
        "pos": 0,
      },
      "kind": 55,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with function 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 28,
  "kind": 34,
  "pos": 1,
  "statements": Array [
    Object {
      "__debugKind": "FunctionStatement",
      "body": Object {
        "__debugKind": "LocalExpressionStatement",
        "end": 28,
        "expression": Object {
          "__debugKind": "NullExpression",
          "end": 28,
          "kind": 39,
          "pos": 23,
          "token": Object {
            "__debugKind": "NullKeyword",
            "end": 27,
            "fullPos": 18,
            "kind": 24,
            "leadingIndent": 4,
            "pos": 23,
          },
        },
        "kind": 52,
        "pos": 23,
      },
      "end": 28,
      "kind": 54,
      "name": Object {
        "__debugKind": "Identifier",
        "end": 7,
        "fullPos": 5,
        "id": "f",
        "kind": 21,
        "leadingIndent": 1,
        "pos": 6,
      },
      "params": Array [
        Object {
          "__debugKind": "Identifier",
          "end": 9,
          "fullPos": 8,
          "id": "x",
          "kind": 21,
          "pos": 8,
        },
        Object {
          "__debugKind": "Identifier",
          "end": 12,
          "fullPos": 10,
          "id": "y",
          "kind": 21,
          "pos": 11,
        },
        Object {
          "__debugKind": "Identifier",
          "end": 15,
          "fullPos": 13,
          "id": "z",
          "kind": 21,
          "pos": 14,
        },
      ],
      "pos": 1,
    },
  ],
}
`;

exports[`Parser Should work with integer 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 1,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 1,
      "expression": Object {
        "__debugKind": "IntegerLiteralExpression",
        "end": 1,
        "kind": 35,
        "pos": 0,
        "value": Object {
          "__debugKind": "IntegerLiteralToken",
          "end": 1,
          "fullPos": 0,
          "kind": 19,
          "pos": 0,
          "value": "1",
        },
      },
      "kind": 55,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with null 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 4,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 4,
      "expression": Object {
        "__debugKind": "NullExpression",
        "end": 4,
        "kind": 39,
        "pos": 0,
        "token": Object {
          "__debugKind": "NullKeyword",
          "end": 4,
          "fullPos": 0,
          "kind": 24,
          "pos": 0,
        },
      },
      "kind": 55,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with object 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 26,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 26,
      "expression": Object {
        "__debugKind": "ObjectsExpression",
        "end": 26,
        "extendsClause": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 9,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 7,
            "id": "p",
            "kind": 21,
            "pos": 7,
          },
          "kind": 36,
          "pos": 7,
        },
        "kind": 40,
        "pos": 0,
        "slots": Array [
          Object {
            "__debugKind": "VariableSlot",
            "end": 26,
            "initializer": Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 26,
              "kind": 35,
              "pos": 23,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 25,
                "fullPos": 22,
                "kind": 19,
                "pos": 23,
                "value": "10",
              },
            },
            "kind": 48,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 20,
              "fullPos": 18,
              "id": "x",
              "kind": 21,
              "pos": 19,
            },
            "pos": 15,
          },
        ],
      },
      "kind": 55,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with object with slots 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 26,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 26,
      "expression": Object {
        "__debugKind": "ObjectsExpression",
        "end": 26,
        "extendsClause": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 9,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 7,
            "id": "p",
            "kind": 21,
            "pos": 7,
          },
          "kind": 36,
          "pos": 7,
        },
        "kind": 40,
        "pos": 0,
        "slots": Array [
          Object {
            "__debugKind": "VariableSlot",
            "end": 26,
            "initializer": Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 26,
              "kind": 35,
              "pos": 23,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 25,
                "fullPos": 22,
                "kind": 19,
                "pos": 23,
                "value": "10",
              },
            },
            "kind": 48,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 20,
              "fullPos": 18,
              "id": "x",
              "kind": 21,
              "pos": 19,
            },
            "pos": 15,
          },
        ],
      },
      "kind": 55,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with object without extends 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 23,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 23,
      "expression": Object {
        "__debugKind": "ObjectsExpression",
        "end": 23,
        "extendsClause": undefined,
        "kind": 40,
        "pos": 0,
        "slots": Array [
          Object {
            "__debugKind": "VariableSlot",
            "end": 23,
            "initializer": Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 23,
              "kind": 35,
              "pos": 20,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 22,
                "fullPos": 19,
                "kind": 19,
                "pos": 20,
                "value": "10",
              },
            },
            "kind": 48,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 17,
              "fullPos": 15,
              "id": "x",
              "kind": 21,
              "pos": 16,
            },
            "pos": 12,
          },
        ],
      },
      "kind": 55,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with printing 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 31,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 31,
      "expression": Object {
        "__debugKind": "PrintingExpression",
        "args": Array [
          Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 31,
            "kind": 35,
            "pos": 29,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 30,
              "fullPos": 28,
              "kind": 19,
              "pos": 29,
              "value": "8",
            },
          },
        ],
        "end": 31,
        "format": Object {
          "__debugKind": "StringLiteralToken",
          "end": 26,
          "fullPos": 8,
          "kind": 20,
          "pos": 8,
          "value": " My age is ~. n ",
        },
        "kind": 37,
        "pos": 0,
      },
      "kind": 55,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with statement sequences 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 14,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "SequenceOfStatements",
      "end": 14,
      "kind": 51,
      "pos": 0,
      "statements": Array [
        Object {
          "__debugKind": "LocalExpressionStatement",
          "end": 5,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 5,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 4,
              "fullPos": 1,
              "id": "s1",
              "kind": 21,
              "leadingIndent": 1,
              "pos": 2,
            },
            "kind": 36,
            "pos": 2,
          },
          "kind": 52,
          "pos": 2,
        },
        Object {
          "__debugKind": "LocalExpressionStatement",
          "end": 9,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 9,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 8,
              "fullPos": 5,
              "id": "s2",
              "kind": 21,
              "pos": 6,
            },
            "kind": 36,
            "pos": 6,
          },
          "kind": 52,
          "pos": 6,
        },
        Object {
          "__debugKind": "LocalExpressionStatement",
          "end": 14,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 14,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 12,
              "fullPos": 9,
              "id": "s3",
              "kind": 21,
              "pos": 10,
            },
            "kind": 36,
            "pos": 10,
          },
          "kind": 52,
          "pos": 10,
        },
      ],
    },
  ],
}
`;

exports[`Parser Should work with variable reference 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 1,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 1,
      "expression": Object {
        "__debugKind": "VariableReferenceExpression",
        "end": 1,
        "id": Object {
          "__debugKind": "Identifier",
          "end": 1,
          "fullPos": 0,
          "id": "x",
          "kind": 21,
          "pos": 0,
        },
        "kind": 36,
        "pos": 0,
      },
      "kind": 55,
      "pos": 0,
    },
  ],
}
`;
